--- a/source_code/templates/update.html
+++ b/source_code/templates/update.html
@@ -35,6 +35,7 @@
             </div>
 
             <form class="form-horizontal" method="POST" action="/updatephone">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
             {% for row in data %}
               <div class="box-body">
                 <div class="form-group">
